--- a/Fika.Headless.AssetNuker/Fika.Headless.AssetNuker.csproj
+++ b/Fika.Headless.AssetNuker/Fika.Headless.AssetNuker.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+	<PublishSingleFile>true</PublishSingleFile>
+	<SelfContained>true</SelfContained>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+	<DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
