--- a/Build.props
+++ b/Build.props
@@ -7,7 +7,7 @@
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
-	<!-- assembly signing -->
+	<!-- assembly signing --><!--
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'GoldMaster|AnyCPU' ">
 		<SignAssembly>true</SignAssembly>
 		<DelaySign>true</DelaySign>
@@ -15,12 +15,12 @@
 		<NoWarn>$(NoWarn);CS8002</NoWarn>
 	</PropertyGroup>
 
-	<!-- assembly versioning -->
+	--><!-- assembly versioning --><!--
 	<PropertyGroup>
 		<AssemblyVersion>0.9.*</AssemblyVersion>
 		<Deterministic>false</Deterministic>
 		<NoWarn>$(NoWarn);CS7035</NoWarn>
-	</PropertyGroup>
+	</PropertyGroup>-->
 
 	<!-- use author info from AssemblyInfo.cs -->
 	<PropertyGroup>
